增加我的最愛 icon 及一些文字調整

--- a/app/views/scm/demand-planner.html
+++ b/app/views/scm/demand-planner.html
@@ -22,7 +22,7 @@
                                 <th>Item Dimensions</th>
                                 <th>Packing Qty</th>
                                 <th>Inventory Qty</th>
-                                <th>Demend Qty</th>
+                                <th>Demand Qty</th>
                             </tr>
                         </thead>
                         <tbody>
